# my-phonetic-worker

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.jsonc
pkg/: package.json  phonetic.d.ts  phonetic.js  phonetic_bg.wasm  phonetic_bg.wasm.d.ts
public/: index.html  test.html
src/: index.js  main.rs  wsam.rs
