[package]
name = "phonetic"
version = "0.1.0"
edition = "2024"

[lib]
name = "phonetic"
path = "src/wsam.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
#axum = "0.8.1"
#tokio = { version = "1.43.0", features = ["full"] } # Added "full" feature
serde = { version = "1.0.218", features = ["derive"] }
#tower = "0.5.2"
#tower-http = { version = "0.6.2", features = ["cors"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
once_cell = "1.20.3"